Add database queries

--- a/Tdp.Persistence/Tdp.Persistence.csproj
+++ b/Tdp.Persistence/Tdp.Persistence.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Tdp.Application\Tdp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DatabaseQueries\" />
+  </ItemGroup>
+
 </Project>
